[project]
name = "ml-medical-cost"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]

build = [
    "kagglehub==0.3.13",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "pyarrow==20.0.0",
    "mlflow==3.6.0",
    "streamlit==1.50.0",
    "bentoml==1.4.28",
    "pytest==9.0.0",
    "psycopg2==2.9.11",
    "alembic==1.17.0",
    "optuna==4.5.0",
    "optuna-integration==4.3.0",
    "fastapi==0.121.3",
    "uvicorn[standard]==0.38.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
]

server = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pyarrow==20.0.0",
    "scikit-learn==1.7.2",
    "mlflow==3.6.0",
    "psycopg2==2.9.11",
    "alembic==1.17.0",
    "fastapi==0.121.3",
    "uvicorn[standard]==0.38.0"
]

client = [
    "streamlit==1.50.0",
]
